--- a/skiworld-Client/src/main/resources/fxml/Bill.fxml
+++ b/skiworld-Client/src/main/resources/fxml/Bill.fxml
@@ -16,6 +16,11 @@
 
 <AnchorPane prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.BillController">
    <children>
+      <ImageView fitHeight="500.0" fitWidth="900.0" layoutX="60.0" layoutY="60.0" opacity="0.7" pickOnBounds="true" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../images/flatsnow.jpg" />
+         </image>
+      </ImageView>
       <AnchorPane fx:id="elements" layoutX="94.0" layoutY="70.0">
          <children>
             <TableView fx:id="TabBill" layoutX="37.0" layoutY="50.0" prefHeight="219.0" prefWidth="639.0">
