--- a/skiworld-Client/src/main/resources/fxml/Password.fxml
+++ b/skiworld-Client/src/main/resources/fxml/Password.fxml
@@ -2,13 +2,21 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import java.net.URL?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.PasswordController">
+<AnchorPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.PasswordController">
    <children>
-      <SplitPane dividerPositions="0.29797979797979796" layoutX="131.0" layoutY="80.0" prefHeight="301.0" prefWidth="293.0">
+      <ImageView fitHeight="400.0" fitWidth="500.0" layoutX="80.0" layoutY="80.0" opacity="0.7" pickOnBounds="true" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../images/flatsnow.jpg" />
+         </image>
+      </ImageView>
+      <SplitPane dividerPositions="0.29797979797979796" layoutX="131.0" layoutY="80.0" prefHeight="301.0" prefWidth="293.0" style="-fx-border-color: black;" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="50.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
@@ -26,6 +34,10 @@
             </AnchorPane>
         </items>
       </SplitPane>
-      <JFXButton buttonType="RAISED" layoutX="252.0" layoutY="419.0" onAction="#SendAction" ripplerFill="#fc0000" text="Send" />
+      <JFXButton buttonType="RAISED" layoutX="252.0" layoutY="419.0" onAction="#SendAction" ripplerFill="#fc0000" styleClass="btn" text="Send" AnchorPane.bottomAnchor="10.0" />
    </children>
+   <stylesheets>
+      <URL value="@../styles/menu_items.css" />
+      <URL value="@../styles/menu.css" />
+   </stylesheets>
 </AnchorPane>
