--- a/skiworld-Client/src/main/resources/fxml/AddDiscount.fxml
+++ b/skiworld-Client/src/main/resources/fxml/AddDiscount.fxml
@@ -14,6 +14,11 @@
 
 <AnchorPane maxWidth="500.0" prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.AddDiscountController">
    <children>
+      <ImageView fitHeight="400.0" fitWidth="550.0" layoutX="30.0" layoutY="30.0" opacity="0.7" pickOnBounds="true" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../images/flatsnow.jpg" />
+         </image>
+      </ImageView>
       <AnchorPane fx:id="Conteneur" layoutX="100.0" layoutY="94.0">
          <children>
             <Label layoutY="4.0" text="Starting Date :" />
@@ -25,13 +30,13 @@
             <ChoiceBox fx:id="percentage" layoutX="100.0" layoutY="135.0" prefHeight="27.0" prefWidth="202.0" styleClass="combo-box" />
          </children>
       </AnchorPane>
-      <Text fill="#2b579a" layoutX="-80.0" layoutY="26.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Discount Add">
+      <Text fill="#2b579a" layoutX="32.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Discount Add">
          <font>
             <Font name="System Bold" size="25.0" />
          </font>
       </Text>
       <ProgressBar fx:id="ProgressLoading" layoutX="-108.0" layoutY="46.0" prefHeight="14.0" prefWidth="658.0" progress="0.0" />
-      <ImageView fx:id="loading" fitHeight="30.0" fitWidth="30.0" layoutX="109.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="loading" fitHeight="30.0" fitWidth="30.0" layoutX="221.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/loading.GIF" />
          </image>
