--- a/skiworld-Client/src/main/resources/fxml/AddEvents.fxml
+++ b/skiworld-Client/src/main/resources/fxml/AddEvents.fxml
@@ -16,6 +16,11 @@
 
 <AnchorPane id="AnchorPane" minHeight="500.0" minWidth="600.0" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.AddEventsController">
    <children>
+      <ImageView fitHeight="500.0" fitWidth="700.0" layoutX="20.0" layoutY="20.0" opacity="0.7" pickOnBounds="true" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../images/flatsnow.jpg" />
+         </image>
+      </ImageView>
       <AnchorPane fx:id="Conteneur" layoutX="130.0" layoutY="60.0">
          <children>
             <Label text="Name :" />
@@ -40,7 +45,7 @@
             <Font name="System Bold" size="25.0" />
          </font>
       </Text>
-      <ProgressBar fx:id="ProgressLoading" layoutX="14.0" layoutY="46.0" prefHeight="14.0" prefWidth="685.0" progress="0.0" />
+      <ProgressBar fx:id="ProgressLoading" layoutX="14.0" layoutY="46.0" prefHeight="14.0" prefWidth="685.0" progress="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0" />
       <ImageView fx:id="loading" fitHeight="27.0" fitWidth="30.0" layoutX="233.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/loading.GIF" />
