--- a/skiworld-Client/src/main/resources/fxml/AddRoom.fxml
+++ b/skiworld-Client/src/main/resources/fxml/AddRoom.fxml
@@ -14,6 +14,11 @@
 
 <AnchorPane id="AnchorPane" minHeight="500.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.AddRoomController">
    <children>
+      <ImageView fitHeight="500.0" fitWidth="600.0" layoutX="50.0" layoutY="50.0" opacity="0.7" pickOnBounds="true" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../images/flatsnow.jpg" />
+         </image>
+      </ImageView>
       <AnchorPane fx:id="Conteneur" layoutX="130.0" layoutY="130.0">
          <children>
             <Label text="Simple bed :" />
@@ -33,7 +38,7 @@
             <Font name="System Bold" size="25.0" />
          </font>
       </Text>
-      <ProgressBar fx:id="ProgressLoading" layoutX="10.0" layoutY="46.0" prefHeight="14.0" prefWidth="591.0" progress="0.0" />
+      <ProgressBar fx:id="ProgressLoading" layoutX="10.0" layoutY="46.0" prefHeight="14.0" prefWidth="591.0" progress="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0" />
       <ImageView fx:id="loading" fitHeight="30.0" fitWidth="30.0" layoutX="333.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/loading.GIF" />
