--- a/skiworld-Client/src/main/resources/fxml/AddShop.fxml
+++ b/skiworld-Client/src/main/resources/fxml/AddShop.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -11,6 +12,11 @@
 
 <AnchorPane prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.AddShopController">
    <children>
+      <ImageView fitHeight="500.0" fitWidth="900.0" layoutX="50.0" layoutY="50.0" opacity="0.7" pickOnBounds="true" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../images/flatsnow.jpg" />
+         </image>
+      </ImageView>
       <Label layoutX="5.0" layoutY="102.0" prefHeight="26.0" prefWidth="106.0" text="Equipement name :" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="100.0" />
       <TextField fx:id="name" layoutX="208.0" layoutY="103.0" AnchorPane.leftAnchor="210.0" AnchorPane.rightAnchor="500.0" AnchorPane.topAnchor="100.0" />
       <Label layoutX="5.0" layoutY="142.0" prefHeight="26.0" prefWidth="139.0" text="Equipement Category :" AnchorPane.leftAnchor="80.0" AnchorPane.topAnchor="140.0" />
