--- a/skiworld-Client/src/main/resources/fxml/AddTrips.fxml
+++ b/skiworld-Client/src/main/resources/fxml/AddTrips.fxml
@@ -4,15 +4,23 @@
 <?import com.jfoenix.controls.JFXDatePicker?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import com.jfoenix.controls.JFXTimePicker?>
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.AddTripsController">
+<AnchorPane prefHeight="500.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.AddTripsController">
    <children>
-      <SplitPane dividerPositions="0.33534743202416917" layoutX="106.0" layoutY="69.0" prefHeight="333.0" prefWidth="333.0">
+      <ImageView fitHeight="500.0" fitWidth="550.0" layoutX="40.0" layoutY="40.0" opacity="0.7" pickOnBounds="true" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../images/flatsnow.jpg" />
+         </image>
+      </ImageView>
+      <SplitPane dividerPositions="0.33534743202416917" layoutX="106.0" layoutY="69.0" prefHeight="333.0" prefWidth="333.0" style="-fx-border-color: black;">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
@@ -42,24 +50,24 @@
             </AnchorPane>
             <AnchorPane prefHeight="325.0" prefWidth="217.0">
                <children>
-                  <JFXTimePicker fx:id="TimeId" layoutX="15.0" layoutY="141.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="220.0" />
-                  <JFXDatePicker fx:id="dateId" layoutX="7.0" layoutY="102.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="160.0" />
-                  <JFXTextField fx:id="DescriptionId" labelFloat="true" layoutY="14.0" promptText="Description">
+                  <JFXTimePicker fx:id="TimeId" layoutX="15.0" layoutY="141.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="220.0" />
+                  <JFXDatePicker fx:id="dateId" layoutX="7.0" layoutY="102.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="160.0" />
+                  <JFXTextField fx:id="DescriptionId" labelFloat="true" layoutY="14.0" promptText="Description" AnchorPane.leftAnchor="20.0">
                      <font>
                         <Font name="Comic Sans MS Italic" size="12.0" />
                      </font>
                   </JFXTextField>
-                  <JFXTextField fx:id="PriceId" labelFloat="true" layoutY="45.0" promptText="Price" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="110.0">
+                  <JFXTextField fx:id="PriceId" labelFloat="true" layoutY="45.0" promptText="Price" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="110.0">
                      <font>
                         <Font name="Comic Sans MS Italic" size="12.0" />
                      </font>
                   </JFXTextField>
-                  <JFXTextField fx:id="NumberId" labelFloat="true" layoutX="8.0" layoutY="75.0" promptText="Number Of Places" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="60.0">
+                  <JFXTextField fx:id="NumberId" labelFloat="true" layoutX="8.0" layoutY="75.0" promptText="Number Of Places" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="60.0">
                      <font>
                         <Font name="Comic Sans MS" size="12.0" />
                      </font>
                   </JFXTextField>
-                  <JFXTextField fx:id="LinkId" labelFloat="true" layoutY="275.0" promptText="Link" />
+                  <JFXTextField fx:id="LinkId" labelFloat="true" layoutY="275.0" promptText="Link" AnchorPane.leftAnchor="20.0" />
                </children>
             </AnchorPane>
         </items>
@@ -68,10 +76,14 @@
          <font>
             <Font name="Comic Sans MS Italic" size="12.0" />
          </font></JFXButton>
-      <JFXButton fx:id="AjouterTripid" buttonType="RAISED" layoutX="273.0" layoutY="434.0" onAction="#AjouterTrip" ripplerFill="#ff1100" text="Add">
+      <JFXButton fx:id="AjouterTripid" buttonType="RAISED" layoutX="273.0" layoutY="434.0" onAction="#AjouterTrip" ripplerFill="#ff1100" styleClass="btn" text="Add">
          <font>
             <Font name="Comic Sans MS Italic" size="12.0" />
          </font>
       </JFXButton>
    </children>
+   <stylesheets>
+      <URL value="@../styles/menu_items.css" />
+      <URL value="@../styles/menu.css" />
+   </stylesheets>
 </AnchorPane>
