--- a/skiworld-Client/src/main/resources/fxml/Admin.fxml
+++ b/skiworld-Client/src/main/resources/fxml/Admin.fxml
@@ -4,6 +4,7 @@
 <?import com.jfoenix.controls.JFXDatePicker?>
 <?import com.jfoenix.controls.JFXPasswordField?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import java.net.URL?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.SplitPane?>
@@ -15,6 +16,11 @@
 
 <AnchorPane prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.AdminController">
    <children>
+      <ImageView fitHeight="500.0" fitWidth="900.0" layoutX="40.0" layoutY="40.0" opacity="0.7" pickOnBounds="true" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../images/flatsnow.jpg" />
+         </image>
+      </ImageView>
       <AnchorPane fx:id="Conteneur" layoutX="74.0" layoutY="59.0">
          <children>
             <SplitPane dividerPositions="0.29797979797979796" prefHeight="390.0" prefWidth="402.0">
@@ -34,20 +40,20 @@
                   </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="361.0" prefWidth="278.0">
                      <children>
-                        <JFXTextField fx:id="CinId" labelFloat="true" layoutX="14.0" layoutY="14.0" AnchorPane.topAnchor="14.0" />
-                        <JFXTextField fx:id="FirstNameId" labelFloat="true" layoutX="21.0" layoutY="91.0" AnchorPane.topAnchor="60.0" />
-                        <JFXTextField fx:id="LastNameId" labelFloat="true" layoutX="21.0" layoutY="142.0" AnchorPane.topAnchor="100.0" />
-                        <JFXTextField fx:id="AddressId" labelFloat="true" layoutX="28.0" layoutY="186.0" AnchorPane.topAnchor="140.0" />
-                        <JFXTextField fx:id="NumTelId" labelFloat="true" layoutX="21.0" layoutY="197.0" AnchorPane.topAnchor="180.0" />
-                        <JFXTextField fx:id="LoginId" labelFloat="true" layoutX="28.0" layoutY="265.0" onKeyReleased="#TestLogin" AnchorPane.topAnchor="260.0" />
-                        <JFXPasswordField fx:id="PwdId" labelFloat="true" layoutX="21.0" layoutY="301.0" onKeyReleased="#checkPwd" AnchorPane.topAnchor="301.0" />
-                        <JFXDatePicker fx:id="BirthdayId" layoutX="14.0" layoutY="232.0" AnchorPane.topAnchor="220.0" />
-                        <JFXTextField fx:id="MailId" labelFloat="true" layoutX="21.0" layoutY="342.0" />
+                        <JFXTextField fx:id="CinId" labelFloat="true" layoutX="14.0" layoutY="14.0" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="14.0" />
+                        <JFXTextField fx:id="FirstNameId" labelFloat="true" layoutX="21.0" layoutY="91.0" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="60.0" />
+                        <JFXTextField fx:id="LastNameId" labelFloat="true" layoutX="21.0" layoutY="142.0" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="100.0" />
+                        <JFXTextField fx:id="AddressId" labelFloat="true" layoutX="28.0" layoutY="186.0" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="140.0" />
+                        <JFXTextField fx:id="NumTelId" labelFloat="true" layoutX="21.0" layoutY="197.0" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="180.0" />
+                        <JFXTextField fx:id="LoginId" labelFloat="true" layoutX="28.0" layoutY="265.0" onKeyReleased="#TestLogin" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="260.0" />
+                        <JFXPasswordField fx:id="PwdId" labelFloat="true" layoutX="21.0" layoutY="301.0" onKeyReleased="#checkPwd" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="301.0" />
+                        <JFXDatePicker fx:id="BirthdayId" layoutX="14.0" layoutY="232.0" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="220.0" />
+                        <JFXTextField fx:id="MailId" labelFloat="true" layoutX="21.0" layoutY="342.0" AnchorPane.leftAnchor="30.0" />
                      </children>
                   </AnchorPane>
               </items>
             </SplitPane>
-            <JFXButton fx:id="Updateid" buttonType="RAISED" layoutX="211.0" layoutY="401.0" onAction="#UpdateAction" ripplerFill="RED" text="Update">
+            <JFXButton fx:id="Updateid" buttonType="RAISED" layoutX="211.0" layoutY="401.0" onAction="#UpdateAction" ripplerFill="RED" styleClass="btn" text="Update">
                <font>
                   <Font name="Comic Sans MS Italic" size="12.0" />
                </font>
@@ -64,11 +70,15 @@
             <Font name="System Bold" size="25.0" />
          </font>
       </Text>
-      <ProgressBar fx:id="ProgressLoading" layoutX="-9.0" layoutY="35.0" prefHeight="18.0" prefWidth="886.0" progress="0.0" />
+      <ProgressBar fx:id="ProgressLoading" layoutX="-9.0" layoutY="35.0" prefHeight="18.0" prefWidth="886.0" progress="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
       <ImageView fx:id="loading" fitHeight="27.0" fitWidth="30.0" layoutX="248.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/loading.GIF" />
          </image>
       </ImageView>
    </children>
+   <stylesheets>
+      <URL value="@../styles/menu_items.css" />
+      <URL value="@../styles/menu.css" />
+   </stylesheets>
 </AnchorPane>
