--- a/skiworld-Client/src/main/resources/fxml/AjoutTrack.fxml
+++ b/skiworld-Client/src/main/resources/fxml/AjoutTrack.fxml
@@ -13,8 +13,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="350.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.AddTrackController">
+<AnchorPane prefHeight="350.0" prefWidth="510.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.AddTrackController">
    <children>
+      <ImageView fitHeight="350.0" fitWidth="520.0" opacity="0.7" pickOnBounds="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../images/flatsnow.jpg" />
+         </image>
+      </ImageView>
       <AnchorPane fx:id="TableTrack" layoutX="94.0" layoutY="78.0">
          <children>
             <JFXButton layoutX="281.0" layoutY="168.0" onAction="#Add" prefWidth="100.0" styleClass="btn" text="Add" />
@@ -36,7 +41,7 @@
             <Font name="System Bold" size="25.0" />
          </font>
       </Text>
-      <ProgressBar fx:id="ProgressLoading" layoutY="54.0" prefHeight="14.0" prefWidth="506.0" progress="0.0" />
+      <ProgressBar fx:id="ProgressLoading" layoutY="54.0" prefHeight="14.0" prefWidth="506.0" progress="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0" />
       <ImageView fx:id="loading" fitHeight="27.0" fitWidth="30.0" layoutX="187.0" layoutY="13.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/loading.GIF" />
