--- a/skiworld-Client/src/main/resources/fxml/AjoutTraining.fxml
+++ b/skiworld-Client/src/main/resources/fxml/AjoutTraining.fxml
@@ -15,8 +15,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane minHeight="427.0" minWidth="800.0" prefHeight="458.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.AddTrainingController">
+<AnchorPane minHeight="450.0" minWidth="700.0" prefHeight="450.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.AddTrainingController">
    <children>
+      <ImageView fitHeight="450.0" fitWidth="700.0" layoutX="10.0" layoutY="10.0" opacity="0.7" pickOnBounds="true" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../images/flatsnow.jpg" />
+         </image>
+      </ImageView>
       <AnchorPane fx:id="TableTrack" layoutX="91.0" layoutY="80.0">
          <children>
             <Label fx:id="Bdlab" layoutX="2.0" layoutY="137.0" text="Begining Date :" />
@@ -48,7 +53,7 @@
             <Image url="@../images/loading.GIF" />
          </image>
       </ImageView>
-      <ProgressBar fx:id="ProgressLoading" layoutX="1.0" layoutY="49.0" prefHeight="14.0" prefWidth="800.0" progress="0.0" />
+      <ProgressBar fx:id="ProgressLoading" layoutX="1.0" layoutY="49.0" prefHeight="14.0" prefWidth="800.0" progress="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0" />
       
    </children>
    <stylesheets>
