--- a/skiworld-Client/src/main/resources/fxml/DayMenu.fxml
+++ b/skiworld-Client/src/main/resources/fxml/DayMenu.fxml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import java.net.URL?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane minHeight="500.0" minWidth="900.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.DayMenuController">
    <children>
-      <TableView fx:id="prodTable" layoutX="167.0" layoutY="68.0" opacity="0.66" prefHeight="345.0" prefWidth="462.0" stylesheets="@../styles/testBilel.css">
+      <ImageView fitHeight="500.0" fitWidth="900.0" layoutX="60.0" layoutY="60.0" opacity="0.7" pickOnBounds="true" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../images/flatsnow.jpg" />
+         </image>
+      </ImageView>
+      <TableView fx:id="prodTable" layoutX="167.0" layoutY="68.0" opacity="0.66" prefHeight="345.0" prefWidth="462.0">
         <columns>
           <TableColumn fx:id="categoryProdColumn" prefWidth="96.0" text="Product Category" />
           <TableColumn fx:id="nameProdColumn" prefWidth="110.0" text="Product Name" />
@@ -17,6 +25,10 @@
         </columns>
       </TableView>
       <Label fx:id="MenuLabel" layoutX="300.0" layoutY="43.0" prefHeight="25.0" prefWidth="250.0" />
-      <JFXButton fx:id="DeleteMenu" layoutX="300.0" layoutY="432.0" onAction="#deleteMenuAction" prefHeight="25.0" prefWidth="175.0" text="Delete Day Menu" />
+      <JFXButton fx:id="DeleteMenu" layoutX="300.0" layoutY="432.0" onAction="#deleteMenuAction" prefHeight="25.0" prefWidth="175.0" styleClass="btn" text="Delete Day Menu" />
    </children>
+   <stylesheets>
+      <URL value="@../styles/menu_items.css" />
+      <URL value="@../styles/menu.css" />
+   </stylesheets>
 </AnchorPane>
