--- a/skiworld-Client/src/main/resources/fxml/EventsList.fxml
+++ b/skiworld-Client/src/main/resources/fxml/EventsList.fxml
@@ -6,11 +6,18 @@
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.EventsListController">
    <children>
+      <ImageView fitHeight="500.0" fitWidth="900.0" layoutX="60.0" layoutY="60.0" opacity="0.7" pickOnBounds="true" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../images/flatsnow.jpg" />
+         </image>
+      </ImageView>
       <TableView fx:id="tableEvents" layoutX="55.0" layoutY="108.0" prefHeight="400.0" prefWidth="670.0" AnchorPane.bottomAnchor="70.0" AnchorPane.topAnchor="110.0">
          <columns>
             <TableColumn fx:id="name" editable="false" prefWidth="117.0" resizable="false" text="Name" />
