--- a/skiworld-Client/src/main/resources/fxml/Product.fxml
+++ b/skiworld-Client/src/main/resources/fxml/Product.fxml
@@ -2,15 +2,23 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import java.net.URL?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.paint.LinearGradient?>
 <?import javafx.scene.paint.Stop?>
 
 <AnchorPane minHeight="500.0" minWidth="900.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.ProductController">
    <children>
-      <TableView fx:id="prodTable" layoutX="54.0" layoutY="78.0" opacity="0.66" prefHeight="345.0" prefWidth="692.0" stylesheets="@../styles/testBilel.css">
+      <ImageView fitHeight="500.0" fitWidth="900.0" layoutX="70.0" layoutY="70.0" opacity="0.7" pickOnBounds="true" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../images/flatsnow.jpg" />
+         </image>
+      </ImageView>
+      <TableView fx:id="prodTable" layoutX="54.0" layoutY="78.0" opacity="0.66" prefHeight="345.0" prefWidth="692.0">
         <columns>
           <TableColumn fx:id="categoryProdColumn" prefWidth="96.0" text="Product Category" />
           <TableColumn fx:id="nameProdColumn" prefWidth="110.0" text="Product Name" />
@@ -18,8 +26,8 @@
             <TableColumn fx:id="priceProdColumn" prefWidth="117.0" text="Product Price" />
         </columns>
       </TableView>
-      <JFXButton fx:id="addButton" buttonType="RAISED" layoutX="278.0" layoutY="444.0" onAction="#addProd" ripplerFill="#ff6b9a" text="Add" textAlignment="CENTER" textFill="#6200ff" />
-      <JFXButton fx:id="modifyButton" layoutX="384.0" layoutY="444.0" onAction="#modifyProd" ripplerFill="#0fb9fc" text="Modify">
+      <JFXButton fx:id="addButton" buttonType="RAISED" layoutX="278.0" layoutY="444.0" onAction="#addProd" ripplerFill="#ff6b9a" styleClass="btn" text="Add" textAlignment="CENTER" textFill="#6200ff" />
+      <JFXButton fx:id="modifyButton" layoutX="384.0" layoutY="444.0" onAction="#modifyProd" ripplerFill="#0fb9fc" styleClass="btn" text="Modify">
          <textFill>
             <LinearGradient cycleMethod="REFLECT" endX="1.0" endY="1.0">
                <stops>
@@ -33,7 +41,7 @@
             </LinearGradient>
          </textFill>
       </JFXButton>
-      <JFXButton fx:id="deleteButton" layoutX="482.0" layoutY="444.0" onAction="#deleteProd" ripplerFill="#0dbf27" text="Delete">
+      <JFXButton fx:id="deleteButton" layoutX="482.0" layoutY="444.0" onAction="#deleteProd" ripplerFill="#0dbf27" styleClass="btn" text="Delete">
          <textFill>
             <LinearGradient cycleMethod="REFLECT" endX="1.0" endY="1.0">
                <stops>
@@ -47,7 +55,11 @@
             </LinearGradient>
          </textFill>
       </JFXButton>
-      <JFXTextField fx:id="searchTF" layoutX="601.0" layoutY="53.0" promptText="search" />
-      <JFXButton fx:id="checkButton" layoutX="630.0" layoutY="444.0" onAction="#checkAction" text="Check Day Menu" />
+      <JFXTextField fx:id="searchTF" layoutX="587.0" layoutY="42.0" promptText="search" />
+      <JFXButton fx:id="checkButton" layoutX="630.0" layoutY="444.0" onAction="#checkAction" styleClass="btn" text="Check Day Menu" />
    </children>
+   <stylesheets>
+      <URL value="@../styles/menu_items.css" />
+      <URL value="@../styles/menu.css" />
+   </stylesheets>
 </AnchorPane>
