--- a/skiworld-Client/src/main/resources/fxml/RoomList.fxml
+++ b/skiworld-Client/src/main/resources/fxml/RoomList.fxml
@@ -13,6 +13,11 @@
 
 <AnchorPane prefHeight="500.0" prefWidth="806.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.RoomListController">
    <children>
+      <ImageView fitHeight="500.0" fitWidth="900.0" layoutX="60.0" layoutY="60.0" opacity="0.7" pickOnBounds="true" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../images/flatsnow.jpg" />
+         </image>
+      </ImageView>
       <AnchorPane fx:id="Conteneur" layoutY="60.0">
          <children>
             <TableView fx:id="tableRooms" layoutX="60.0" layoutY="20.0">
@@ -32,7 +37,7 @@
             <Font name="System Bold" size="25.0" />
          </font>
       </Text>
-      <ProgressBar fx:id="ProgressLoading" layoutY="38.0" prefHeight="14.0" prefWidth="801.0" progress="0.0" />
+      <ProgressBar fx:id="ProgressLoading" layoutY="38.0" prefHeight="14.0" prefWidth="801.0" progress="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
       <ImageView fx:id="loading" fitHeight="27.0" fitWidth="30.0" layoutX="240.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/loading.GIF" />
