--- a/skiworld-Client/src/main/resources/fxml/Shop.fxml
+++ b/skiworld-Client/src/main/resources/fxml/Shop.fxml
@@ -16,6 +16,11 @@
 
 <AnchorPane accessibleText="research" prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.ShopController">
    <children>
+      <ImageView fitHeight="500.0" fitWidth="900.0" layoutX="80.0" layoutY="80.0" opacity="0.7" pickOnBounds="true" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../images/flatsnow.jpg" />
+         </image>
+      </ImageView>
       <AnchorPane fx:id="elements" layoutX="100.0" layoutY="70.0">
          <children>
             <TabPane prefHeight="300.0" prefWidth="500.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="40.0">
