--- a/skiworld-Client/src/main/resources/fxml/Track.fxml
+++ b/skiworld-Client/src/main/resources/fxml/Track.fxml
@@ -14,6 +14,11 @@
 
 <AnchorPane prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.TrackController">
    <children>
+      <ImageView fitHeight="500.0" fitWidth="900.0" layoutX="10.0" layoutY="10.0" opacity="0.7" pickOnBounds="true" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../images/flatsnow.jpg" />
+         </image>
+      </ImageView>
       <AnchorPane fx:id="Conteneur" layoutX="100.0" layoutY="60.0">
          <children>
             <TableView fx:id="TableTrack" layoutY="40.0" prefHeight="365.0" prefWidth="500.0">
