--- a/skiworld-Client/src/main/resources/fxml/Transport.fxml
+++ b/skiworld-Client/src/main/resources/fxml/Transport.fxml
@@ -5,12 +5,19 @@
 <?import java.net.URL?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.paint.LinearGradient?>
 <?import javafx.scene.paint.Stop?>
 
 <AnchorPane minHeight="500.0" minWidth="900.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.TransportController">
    <children>
+      <ImageView fitHeight="500.0" fitWidth="900.0" layoutX="80.0" layoutY="80.0" opacity="0.7" pickOnBounds="true" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../images/flatsnow.jpg" />
+         </image>
+      </ImageView>
       <TableView fx:id="transTable" layoutX="54.0" layoutY="78.0" opacity="0.66" prefHeight="345.0" prefWidth="692.0" AnchorPane.leftAnchor="60.0" AnchorPane.topAnchor="90.0">
         <columns>
           <TableColumn fx:id="depPlaceColumn" prefWidth="96.0" text="Departure Place" />
