--- a/skiworld-Client/src/main/resources/fxml/Trips.fxml
+++ b/skiworld-Client/src/main/resources/fxml/Trips.fxml
@@ -2,6 +2,7 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import java.net.URL?>
 <?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
@@ -14,8 +15,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="500.0" prefWidth="804.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.TripsController">
+<AnchorPane prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.TripsController">
    <children>
+      <ImageView fitHeight="500.0" fitWidth="900.0" layoutX="80.0" layoutY="80.0" opacity="0.7" pickOnBounds="true" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../images/flatsnow.jpg" />
+         </image>
+      </ImageView>
       <AnchorPane fx:id="Conteneur" layoutX="21.0" layoutY="102.0">
          <children>
             <TableView fx:id="TableTrip" layoutX="23.0" layoutY="46.0" onMouseClicked="#ClickChangeTrip" prefHeight="285.0" prefWidth="356.0">
@@ -26,23 +32,23 @@
                   <TableColumn fx:id="DateCol" prefWidth="130.0" text="Date" />
               </columns>
             </TableView>
-            <JFXButton fx:id="DeleteTripId" buttonType="RAISED" layoutX="304.0" layoutY="350.0" onAction="#DeleteTripAction" ripplerFill="#ff0505" text="Delete">
+            <JFXButton fx:id="DeleteTripId" buttonType="RAISED" layoutX="304.0" layoutY="350.0" onAction="#DeleteTripAction" ripplerFill="#ff0505" styleClass="btn" text="Delete">
                <font>
                   <Font name="Comic Sans MS Italic" size="12.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="AddTrip" buttonType="RAISED" layoutX="216.0" layoutY="350.0" onAction="#AddAction" ripplerFill="RED" text="Add">
+            <JFXButton fx:id="AddTrip" buttonType="RAISED" layoutX="216.0" layoutY="350.0" onAction="#AddAction" ripplerFill="RED" styleClass="btn" text="Add">
                <font>
                   <Font name="Comic Sans MS Italic" size="12.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="WatchId" buttonType="RAISED" layoutX="682.0" layoutY="1.0" onAction="#WatchAction" ripplerFill="#2a2af5" text="Watch">
+            <JFXButton fx:id="WatchId" buttonType="RAISED" layoutX="682.0" layoutY="1.0" onAction="#WatchAction" ripplerFill="#2a2af5" styleClass="btn" text="Watch">
                <font>
                   <Font name="Comic Sans MS Italic" size="12.0" />
                </font>
             </JFXButton>
             <JFXTextField fx:id="searchId" labelFloat="true" layoutX="23.0" layoutY="6.0" promptText="What I'am looking for !" />
-            <BarChart fx:id="barChart" layoutX="387.0" layoutY="40.0" prefHeight="360.0" prefWidth="391.0">
+            <BarChart fx:id="barChart" layoutX="387.0" layoutY="40.0" prefHeight="360.0" prefWidth="391.0" AnchorPane.bottomAnchor="0.0">
               <xAxis>
                 <CategoryAxis side="BOTTOM" />
               </xAxis>
@@ -64,4 +70,8 @@
          </image>
       </ImageView>
    </children>
+   <stylesheets>
+      <URL value="@../styles/menu_items.css" />
+      <URL value="@../styles/menu.css" />
+   </stylesheets>
 </AnchorPane>
