--- a/skiworld-Client/src/main/resources/fxml/UpdateEvents.fxml
+++ b/skiworld-Client/src/main/resources/fxml/UpdateEvents.fxml
@@ -7,11 +7,18 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane id="AnchorPane" minHeight="500.0" minWidth="600.0" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.UpdateEventsController">
    <children>
+      <ImageView fitHeight="500.0" fitWidth="600.0" layoutX="90.0" layoutY="90.0" opacity="0.7" pickOnBounds="true" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../images/flatsnow.jpg" />
+         </image>
+      </ImageView>
       <Label layoutX="100.0" layoutY="34.0" text="Name :" AnchorPane.topAnchor="50.0" />
       <Label layoutX="101.0" layoutY="76.0" text="Place :" AnchorPane.topAnchor="100.0" />
       <Label layoutX="98.0" layoutY="312.0" text="Description :" AnchorPane.topAnchor="310.0" />
