--- a/skiworld-Client/src/main/resources/fxml/UpdateProduct.fxml
+++ b/skiworld-Client/src/main/resources/fxml/UpdateProduct.fxml
@@ -2,11 +2,19 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import java.net.URL?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane minHeight="300.0" minWidth="700.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.UpdateProductController">
    <children>
+      <ImageView fitHeight="300.0" fitWidth="700.0" layoutX="90.0" layoutY="90.0" opacity="0.7" pickOnBounds="true" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../images/flatsnow.jpg" />
+         </image>
+      </ImageView>
       <Label layoutX="63.0" layoutY="66.0" text="Product Name" />
       <Label layoutX="63.0" layoutY="142.0" text="Product Category" />
       <Label layoutX="387.0" layoutY="66.0" text="Product Type" />
@@ -15,6 +23,10 @@
       <JFXTextField fx:id="category" layoutX="174.0" layoutY="138.0" />
       <JFXTextField fx:id="type" layoutX="491.0" layoutY="62.0" />
       <JFXTextField fx:id="price" layoutX="491.0" layoutY="138.0" />
-      <JFXButton fx:id="updateButton" layoutX="324.0" layoutY="223.0" onAction="#UpdateProduct" text="Update Product" />
+      <JFXButton fx:id="updateButton" layoutX="324.0" layoutY="223.0" onAction="#UpdateProduct" styleClass="btn" text="Update Product" />
    </children>
+   <stylesheets>
+      <URL value="@../styles/menu_items.css" />
+      <URL value="@../styles/menu.css" />
+   </stylesheets>
 </AnchorPane>
