--- a/skiworld-Client/src/main/resources/fxml/UpdateShop.fxml
+++ b/skiworld-Client/src/main/resources/fxml/UpdateShop.fxml
@@ -4,11 +4,18 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.UpdateShopController">
    <children>
+      <ImageView fitHeight="400.0" fitWidth="600.0" layoutX="90.0" layoutY="90.0" opacity="0.7" pickOnBounds="true" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../images/flatsnow.jpg" />
+         </image>
+      </ImageView>
       <Label layoutX="18.0" layoutY="97.0" text="Name :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="60.0" />
       <Label layoutX="18.0" layoutY="133.0" text="Category :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="110.0" />
       <Label layoutX="21.0" layoutY="174.0" text="Type :" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="160.0" />
