--- a/skiworld-Client/src/main/resources/fxml/UpdateTrack.fxml
+++ b/skiworld-Client/src/main/resources/fxml/UpdateTrack.fxml
@@ -13,8 +13,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="411.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.UpdateTrackController">
+<AnchorPane prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="esprit.skiworld.skiworld_Client.UpdateTrackController">
    <children>
+      <ImageView fitHeight="400.0" fitWidth="500.0" layoutX="10.0" layoutY="10.0" opacity="0.7" pickOnBounds="true" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@../images/flatsnow.jpg" />
+         </image>
+      </ImageView>
       <AnchorPane fx:id="TableTrack" layoutX="61.0" layoutY="64.0" prefHeight="322.0" prefWidth="424.0">
          <children>
             <Label fx:id="difflab" layoutX="9.0" layoutY="199.0" text="Difficulty :" />
@@ -41,7 +46,7 @@
             <Image url="@../images/loading.GIF" />
          </image>
       </ImageView>
-      <ProgressBar fx:id="ProgressLoading" layoutX="5.0" layoutY="39.0" prefHeight="14.0" prefWidth="490.0" progress="0.0" />
+      <ProgressBar fx:id="ProgressLoading" layoutX="5.0" layoutY="39.0" prefHeight="14.0" prefWidth="490.0" progress="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
    </children>
    <stylesheets>
       <URL value="@../styles/menu_items.css" />
